# Movies-Recommendation

./: README.md
Sentence-Transformer/: .gitignore  README.md  app.py  main.py  model.ipynb  requirements.txt
TFIDF-KNN/: .gitignore  README.md  app.py  model.ipynb  pyproject.toml  requirements.txt
TFIDF-KNN/pickle_model/: knn_model.pkl  movies_metadata.csv  tfidf_vectorizer.pkl
TMDB-API/: .gitignore  README.md  app.py  main.py  pyproject.toml
